[CSS Cascade Layers] [Debug] ASSERTION FAILED: m_childRules.isEmpty() when using @import with layer name https://bugs.webkit.org/show_bug.cgi?id=233283 <rdar://problem/85520733>

Reviewed by Antoine Quint.

Source/WebCore:

CSS parser is allowing rules in illegal order (@import rule following @layer block)

Test: fast/css/layer-illegal-import.html

* css/parser/CSSParserImpl.cpp:
(WebCore::computeNewAllowedRules):

Only stay in AllowLayerStatementRules state if the new layer is a statement, not a block.

LayoutTests:

* fast/css/layer-illegal-import-expected.html: Added.
* fast/css/layer-illegal-import.html: Added.



Canonical link: https://commits.webkit.org/244451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286064 268f45cc-cd09-0410-ab3c-d52691b4dbfc